# skeleton

./: README.md  pyproject.toml  script.py
tests/: test_skeleton.py
