[tool.poetry]
name = "skeleton"
version = "0.1.0"
description = ""
authors = ["Evert Rol <@>"]
packages = [ { include = "skeleton", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"
black = "22.3.0"
pylint = "^2.13.4"
pyproject-flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
